y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 lclasse

   3  lclasse : classe lclasse
   4          |

   5  $$2 :

   6  classe : CLASS ID $$2 extends '{' corpoclasse '}'

   7  extends : EXTENDS ID
   8          |

   9  corpoclasse : PRIVATE ':' ldecl PUBLIC ':' lmet

  10  ldecl : decl ldecl
  11        |

  12  $$3 :

  13  decl : tipo ID $$3 arrayOuNao lid ';'

  14  arrayOuNao : '[' NUM ']'
  15             |

  16  $$4 :

  17  lid : ',' ID $$4 lid
  18      |

  19  lmet : met lmet
  20       |

  21  met : metconst
  22      | metnormal
  23      | metvoid

  24  $$5 :

  25  metconst : ID $$5 '(' lparam ')' ldecl '{' corpomet '}'

  26  $$6 :

  27  $$7 :

  28  metnormal : tipo $$6 arrayMetodoOuNao ID $$7 '(' lparam ')' ldecl '{' corpomet '}'

  29  $$8 :

  30  metvoid : VOID ID $$8 '(' lparam ')' ldecl '{' corpomet '}'

  31  arrayMetodoOuNao : '[' ']'
  32                   |

  33  lparam : param sublparam
  34         |

  35  param : tipo ID

  36  sublparam : ',' param sublparam
  37            |

  38  $$9 :

  39  lparamchamada : exp $$9 sublparamchamada
  40                |

  41  $$10 :

  42  sublparamchamada : ',' exp $$10 sublparamchamada
  43                   |

  44  $$11 :

  45  return : RETURN exp $$11 ';'

  46  exp : exp '+' exp
  47      | exp '*' exp
  48      | exp '-' exp
  49      | exp '/' exp
  50      | exp '>' exp
  51      | exp '<' exp
  52      | exp '%' exp
  53      | exp AND exp
  54      | exp OR exp
  55      | exp LEQ exp
  56      | exp GEQ exp
  57      | exp EQ exp
  58      | exp NEQ exp
  59      | NUM
  60      | NUMDOUBLE
  61      | TRUE
  62      | FALSE
  63      | LIT
  64      | '(' exp ')'
  65      | ID
  66      | exp '[' exp ']'
  67      | chamaMetodo
  68      | NEW chamaConstrutor

  69  corpomet : lcmdloop

  70  cmd : atrib ';'
  71      | escrita
  72      | leia
  73      | if
  74      | while
  75      | for
  76      | return

  77  $$12 :

  78  atrib : ID $$12 arrayOuNao '=' exp

  79  escrita : ESCREVA restoEscrita

  80  restoEscrita : exp contescrita ';'

  81  contescrita : ',' exp
  82              |

  83  $$13 :

  84  leia : LEIA ID $$13 ';'

  85  $$14 :

  86  if : IF exp $$14 ':' lcmdloop else

  87  else : ELSE ':' lcmdloop ENDIF
  88       | ENDIF

  89  $$15 :

  90  $$16 :

  91  while : WHILE exp $$15 ':' $$16 lcmdloop ENDWHILE

  92  $$17 :

  93  $$18 :

  94  for : FOR atrib ';' exp $$17 ';' atrib ':' $$18 lcmdloop ENDFOR

  95  break : BREAK ';'

  96  lcmdloop : cmd lcmdloop
  97           | break lcmdloop
  98           |

  99  $$19 :

 100  chamaMetodo : ID '.' ID $$19 '(' lparamchamada ')'

 101  $$20 :

 102  chamaConstrutor : ID $$20 '(' lparamchamada ')'

 103  tipo : INT
 104       | DOUBLE
 105       | STRING
 106       | BOOLEAN
 107       | ID

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . lclasse  (2)
	lclasse : .  (4)

	CLASS  shift 3
	$end  reduce 4

	lclasse  goto 4
	classe  goto 5


state 3
	classe : CLASS . ID $$2 extends '{' corpoclasse '}'  (6)

	ID  shift 6
	.  error


state 4
	prog : $$1 lclasse .  (2)

	.  reduce 2


state 5
	lclasse : classe . lclasse  (3)
	lclasse : .  (4)

	CLASS  shift 3
	$end  reduce 4

	lclasse  goto 7
	classe  goto 5


state 6
	classe : CLASS ID . $$2 extends '{' corpoclasse '}'  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 8


state 7
	lclasse : classe lclasse .  (3)

	.  reduce 3


state 8
	classe : CLASS ID $$2 . extends '{' corpoclasse '}'  (6)
	extends : .  (8)

	EXTENDS  shift 9
	'{'  reduce 8

	extends  goto 10


state 9
	extends : EXTENDS . ID  (7)

	ID  shift 11
	.  error


state 10
	classe : CLASS ID $$2 extends . '{' corpoclasse '}'  (6)

	'{'  shift 12
	.  error


state 11
	extends : EXTENDS ID .  (7)

	.  reduce 7


state 12
	classe : CLASS ID $$2 extends '{' . corpoclasse '}'  (6)

	PRIVATE  shift 13
	.  error

	corpoclasse  goto 14


state 13
	corpoclasse : PRIVATE . ':' ldecl PUBLIC ':' lmet  (9)

	':'  shift 15
	.  error


state 14
	classe : CLASS ID $$2 extends '{' corpoclasse . '}'  (6)

	'}'  shift 16
	.  error


state 15
	corpoclasse : PRIVATE ':' . ldecl PUBLIC ':' lmet  (9)
	ldecl : .  (11)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	PUBLIC  reduce 11

	tipo  goto 22
	ldecl  goto 23
	decl  goto 24


state 16
	classe : CLASS ID $$2 extends '{' corpoclasse '}' .  (6)

	.  reduce 6


state 17
	tipo : ID .  (107)

	.  reduce 107


state 18
	tipo : INT .  (103)

	.  reduce 103


state 19
	tipo : DOUBLE .  (104)

	.  reduce 104


state 20
	tipo : STRING .  (105)

	.  reduce 105


state 21
	tipo : BOOLEAN .  (106)

	.  reduce 106


state 22
	decl : tipo . ID $$3 arrayOuNao lid ';'  (13)

	ID  shift 25
	.  error


state 23
	corpoclasse : PRIVATE ':' ldecl . PUBLIC ':' lmet  (9)

	PUBLIC  shift 26
	.  error


state 24
	ldecl : decl . ldecl  (10)
	ldecl : .  (11)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	PUBLIC  reduce 11
	'{'  reduce 11

	tipo  goto 22
	ldecl  goto 27
	decl  goto 24


state 25
	decl : tipo ID . $$3 arrayOuNao lid ';'  (13)
	$$3 : .  (12)

	.  reduce 12

	$$3  goto 28


state 26
	corpoclasse : PRIVATE ':' ldecl PUBLIC . ':' lmet  (9)

	':'  shift 29
	.  error


state 27
	ldecl : decl ldecl .  (10)

	.  reduce 10


state 28
	decl : tipo ID $$3 . arrayOuNao lid ';'  (13)
	arrayOuNao : .  (15)

	'['  shift 30
	';'  reduce 15
	','  reduce 15

	arrayOuNao  goto 31


state 29
	corpoclasse : PRIVATE ':' ldecl PUBLIC ':' . lmet  (9)
	lmet : .  (20)

	ID  shift 32
	INT  shift 18
	VOID  shift 33
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	'}'  reduce 20

	tipo  goto 34
	lmet  goto 35
	met  goto 36
	metconst  goto 37
	metnormal  goto 38
	metvoid  goto 39


state 30
	arrayOuNao : '[' . NUM ']'  (14)

	NUM  shift 40
	.  error


state 31
	decl : tipo ID $$3 arrayOuNao . lid ';'  (13)
	lid : .  (18)

	','  shift 41
	';'  reduce 18

	lid  goto 42


state 32
	metconst : ID . $$5 '(' lparam ')' ldecl '{' corpomet '}'  (25)
	tipo : ID .  (107)
	$$5 : .  (24)

	ID  reduce 107
	'['  reduce 107
	'('  reduce 24

	$$5  goto 43


state 33
	metvoid : VOID . ID $$8 '(' lparam ')' ldecl '{' corpomet '}'  (30)

	ID  shift 44
	.  error


state 34
	metnormal : tipo . $$6 arrayMetodoOuNao ID $$7 '(' lparam ')' ldecl '{' corpomet '}'  (28)
	$$6 : .  (26)

	.  reduce 26

	$$6  goto 45


state 35
	corpoclasse : PRIVATE ':' ldecl PUBLIC ':' lmet .  (9)

	.  reduce 9


state 36
	lmet : met . lmet  (19)
	lmet : .  (20)

	ID  shift 32
	INT  shift 18
	VOID  shift 33
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	'}'  reduce 20

	tipo  goto 34
	lmet  goto 46
	met  goto 36
	metconst  goto 37
	metnormal  goto 38
	metvoid  goto 39


state 37
	met : metconst .  (21)

	.  reduce 21


state 38
	met : metnormal .  (22)

	.  reduce 22


state 39
	met : metvoid .  (23)

	.  reduce 23


state 40
	arrayOuNao : '[' NUM . ']'  (14)

	']'  shift 47
	.  error


state 41
	lid : ',' . ID $$4 lid  (17)

	ID  shift 48
	.  error


state 42
	decl : tipo ID $$3 arrayOuNao lid . ';'  (13)

	';'  shift 49
	.  error


state 43
	metconst : ID $$5 . '(' lparam ')' ldecl '{' corpomet '}'  (25)

	'('  shift 50
	.  error


state 44
	metvoid : VOID ID . $$8 '(' lparam ')' ldecl '{' corpomet '}'  (30)
	$$8 : .  (29)

	.  reduce 29

	$$8  goto 51


state 45
	metnormal : tipo $$6 . arrayMetodoOuNao ID $$7 '(' lparam ')' ldecl '{' corpomet '}'  (28)
	arrayMetodoOuNao : .  (32)

	'['  shift 52
	ID  reduce 32

	arrayMetodoOuNao  goto 53


state 46
	lmet : met lmet .  (19)

	.  reduce 19


state 47
	arrayOuNao : '[' NUM ']' .  (14)

	.  reduce 14


state 48
	lid : ',' ID . $$4 lid  (17)
	$$4 : .  (16)

	.  reduce 16

	$$4  goto 54


state 49
	decl : tipo ID $$3 arrayOuNao lid ';' .  (13)

	.  reduce 13


state 50
	metconst : ID $$5 '(' . lparam ')' ldecl '{' corpomet '}'  (25)
	lparam : .  (34)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	')'  reduce 34

	tipo  goto 55
	lparam  goto 56
	param  goto 57


state 51
	metvoid : VOID ID $$8 . '(' lparam ')' ldecl '{' corpomet '}'  (30)

	'('  shift 58
	.  error


state 52
	arrayMetodoOuNao : '[' . ']'  (31)

	']'  shift 59
	.  error


state 53
	metnormal : tipo $$6 arrayMetodoOuNao . ID $$7 '(' lparam ')' ldecl '{' corpomet '}'  (28)

	ID  shift 60
	.  error


state 54
	lid : ',' ID $$4 . lid  (17)
	lid : .  (18)

	','  shift 41
	';'  reduce 18

	lid  goto 61


state 55
	param : tipo . ID  (35)

	ID  shift 62
	.  error


state 56
	metconst : ID $$5 '(' lparam . ')' ldecl '{' corpomet '}'  (25)

	')'  shift 63
	.  error


state 57
	lparam : param . sublparam  (33)
	sublparam : .  (37)

	','  shift 64
	')'  reduce 37

	sublparam  goto 65


state 58
	metvoid : VOID ID $$8 '(' . lparam ')' ldecl '{' corpomet '}'  (30)
	lparam : .  (34)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	')'  reduce 34

	tipo  goto 55
	lparam  goto 66
	param  goto 57


state 59
	arrayMetodoOuNao : '[' ']' .  (31)

	.  reduce 31


state 60
	metnormal : tipo $$6 arrayMetodoOuNao ID . $$7 '(' lparam ')' ldecl '{' corpomet '}'  (28)
	$$7 : .  (27)

	.  reduce 27

	$$7  goto 67


state 61
	lid : ',' ID $$4 lid .  (17)

	.  reduce 17


state 62
	param : tipo ID .  (35)

	.  reduce 35


state 63
	metconst : ID $$5 '(' lparam ')' . ldecl '{' corpomet '}'  (25)
	ldecl : .  (11)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	'{'  reduce 11

	tipo  goto 22
	ldecl  goto 68
	decl  goto 24


state 64
	sublparam : ',' . param sublparam  (36)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	.  error

	tipo  goto 55
	param  goto 69


state 65
	lparam : param sublparam .  (33)

	.  reduce 33


state 66
	metvoid : VOID ID $$8 '(' lparam . ')' ldecl '{' corpomet '}'  (30)

	')'  shift 70
	.  error


state 67
	metnormal : tipo $$6 arrayMetodoOuNao ID $$7 . '(' lparam ')' ldecl '{' corpomet '}'  (28)

	'('  shift 71
	.  error


state 68
	metconst : ID $$5 '(' lparam ')' ldecl . '{' corpomet '}'  (25)

	'{'  shift 72
	.  error


state 69
	sublparam : ',' param . sublparam  (36)
	sublparam : .  (37)

	','  shift 64
	')'  reduce 37

	sublparam  goto 73


state 70
	metvoid : VOID ID $$8 '(' lparam ')' . ldecl '{' corpomet '}'  (30)
	ldecl : .  (11)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	'{'  reduce 11

	tipo  goto 22
	ldecl  goto 74
	decl  goto 24


state 71
	metnormal : tipo $$6 arrayMetodoOuNao ID $$7 '(' . lparam ')' ldecl '{' corpomet '}'  (28)
	lparam : .  (34)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	')'  reduce 34

	tipo  goto 55
	lparam  goto 75
	param  goto 57


state 72
	metconst : ID $$5 '(' lparam ')' ldecl '{' . corpomet '}'  (25)
	lcmdloop : .  (98)

	ID  shift 76
	IF  shift 77
	RETURN  shift 78
	ESCREVA  shift 79
	LEIA  shift 80
	BREAK  shift 81
	WHILE  shift 82
	FOR  shift 83
	'}'  reduce 98

	corpomet  goto 84
	return  goto 85
	lcmdloop  goto 86
	cmd  goto 87
	atrib  goto 88
	escrita  goto 89
	leia  goto 90
	if  goto 91
	while  goto 92
	for  goto 93
	break  goto 94


state 73
	sublparam : ',' param sublparam .  (36)

	.  reduce 36


state 74
	metvoid : VOID ID $$8 '(' lparam ')' ldecl . '{' corpomet '}'  (30)

	'{'  shift 95
	.  error


state 75
	metnormal : tipo $$6 arrayMetodoOuNao ID $$7 '(' lparam . ')' ldecl '{' corpomet '}'  (28)

	')'  shift 96
	.  error


state 76
	atrib : ID . $$12 arrayOuNao '=' exp  (78)
	$$12 : .  (77)

	.  reduce 77

	$$12  goto 97


state 77
	if : IF . exp $$14 ':' lcmdloop else  (86)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 106
	chamaMetodo  goto 107


state 78
	return : RETURN . exp $$11 ';'  (45)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 108
	chamaMetodo  goto 107


state 79
	escrita : ESCREVA . restoEscrita  (79)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 109
	chamaMetodo  goto 107
	restoEscrita  goto 110


state 80
	leia : LEIA . ID $$13 ';'  (84)

	ID  shift 111
	.  error


state 81
	break : BREAK . ';'  (95)

	';'  shift 112
	.  error


state 82
	while : WHILE . exp $$15 ':' $$16 lcmdloop ENDWHILE  (91)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 113
	chamaMetodo  goto 107


state 83
	for : FOR . atrib ';' exp $$17 ';' atrib ':' $$18 lcmdloop ENDFOR  (94)

	ID  shift 76
	.  error

	atrib  goto 114


state 84
	metconst : ID $$5 '(' lparam ')' ldecl '{' corpomet . '}'  (25)

	'}'  shift 115
	.  error


state 85
	cmd : return .  (76)

	.  reduce 76


state 86
	corpomet : lcmdloop .  (69)

	.  reduce 69


state 87
	lcmdloop : cmd . lcmdloop  (96)
	lcmdloop : .  (98)

	ID  shift 76
	IF  shift 77
	RETURN  shift 78
	ESCREVA  shift 79
	LEIA  shift 80
	BREAK  shift 81
	WHILE  shift 82
	FOR  shift 83
	ELSE  reduce 98
	ENDIF  reduce 98
	ENDWHILE  reduce 98
	ENDFOR  reduce 98
	'}'  reduce 98

	return  goto 85
	lcmdloop  goto 116
	cmd  goto 87
	atrib  goto 88
	escrita  goto 89
	leia  goto 90
	if  goto 91
	while  goto 92
	for  goto 93
	break  goto 94


state 88
	cmd : atrib . ';'  (70)

	';'  shift 117
	.  error


state 89
	cmd : escrita .  (71)

	.  reduce 71


state 90
	cmd : leia .  (72)

	.  reduce 72


state 91
	cmd : if .  (73)

	.  reduce 73


state 92
	cmd : while .  (74)

	.  reduce 74


state 93
	cmd : for .  (75)

	.  reduce 75


state 94
	lcmdloop : break . lcmdloop  (97)
	lcmdloop : .  (98)

	ID  shift 76
	IF  shift 77
	RETURN  shift 78
	ESCREVA  shift 79
	LEIA  shift 80
	BREAK  shift 81
	WHILE  shift 82
	FOR  shift 83
	ELSE  reduce 98
	ENDIF  reduce 98
	ENDWHILE  reduce 98
	ENDFOR  reduce 98
	'}'  reduce 98

	return  goto 85
	lcmdloop  goto 118
	cmd  goto 87
	atrib  goto 88
	escrita  goto 89
	leia  goto 90
	if  goto 91
	while  goto 92
	for  goto 93
	break  goto 94


state 95
	metvoid : VOID ID $$8 '(' lparam ')' ldecl '{' . corpomet '}'  (30)
	lcmdloop : .  (98)

	ID  shift 76
	IF  shift 77
	RETURN  shift 78
	ESCREVA  shift 79
	LEIA  shift 80
	BREAK  shift 81
	WHILE  shift 82
	FOR  shift 83
	'}'  reduce 98

	corpomet  goto 119
	return  goto 85
	lcmdloop  goto 86
	cmd  goto 87
	atrib  goto 88
	escrita  goto 89
	leia  goto 90
	if  goto 91
	while  goto 92
	for  goto 93
	break  goto 94


state 96
	metnormal : tipo $$6 arrayMetodoOuNao ID $$7 '(' lparam ')' . ldecl '{' corpomet '}'  (28)
	ldecl : .  (11)

	ID  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 20
	BOOLEAN  shift 21
	'{'  reduce 11

	tipo  goto 22
	ldecl  goto 120
	decl  goto 24


state 97
	atrib : ID $$12 . arrayOuNao '=' exp  (78)
	arrayOuNao : .  (15)

	'['  shift 30
	'='  reduce 15

	arrayOuNao  goto 121


state 98
	exp : ID .  (65)
	chamaMetodo : ID . '.' ID $$19 '(' lparamchamada ')'  (100)

	'.'  shift 122
	EQ  reduce 65
	LEQ  reduce 65
	GEQ  reduce 65
	NEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'['  reduce 65
	':'  reduce 65
	';'  reduce 65
	']'  reduce 65
	','  reduce 65
	')'  reduce 65


state 99
	exp : NUM .  (59)

	.  reduce 59


state 100
	exp : LIT .  (63)

	.  reduce 63


state 101
	exp : TRUE .  (61)

	.  reduce 61


state 102
	exp : FALSE .  (62)

	.  reduce 62


state 103
	exp : NEW . chamaConstrutor  (68)

	ID  shift 123
	.  error

	chamaConstrutor  goto 124


state 104
	exp : NUMDOUBLE .  (60)

	.  reduce 60


state 105
	exp : '(' . exp ')'  (64)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 125
	chamaMetodo  goto 107


state 106
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '-' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '>' exp  (50)
	exp : exp . '<' exp  (51)
	exp : exp . '%' exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . LEQ exp  (55)
	exp : exp . GEQ exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . NEQ exp  (58)
	exp : exp . '[' exp ']'  (66)
	if : IF exp . $$14 ':' lcmdloop else  (86)
	$$14 : .  (85)

	EQ  shift 126
	LEQ  shift 127
	GEQ  shift 128
	NEQ  shift 129
	AND  shift 130
	OR  shift 131
	'>'  shift 132
	'<'  shift 133
	'+'  shift 134
	'-'  shift 135
	'*'  shift 136
	'/'  shift 137
	'%'  shift 138
	'['  shift 139
	':'  reduce 85

	$$14  goto 140


state 107
	exp : chamaMetodo .  (67)

	.  reduce 67


state 108
	return : RETURN exp . $$11 ';'  (45)
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '-' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '>' exp  (50)
	exp : exp . '<' exp  (51)
	exp : exp . '%' exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . LEQ exp  (55)
	exp : exp . GEQ exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . NEQ exp  (58)
	exp : exp . '[' exp ']'  (66)
	$$11 : .  (44)

	EQ  shift 126
	LEQ  shift 127
	GEQ  shift 128
	NEQ  shift 129
	AND  shift 130
	OR  shift 131
	'>'  shift 132
	'<'  shift 133
	'+'  shift 134
	'-'  shift 135
	'*'  shift 136
	'/'  shift 137
	'%'  shift 138
	'['  shift 139
	';'  reduce 44

	$$11  goto 141


state 109
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '-' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '>' exp  (50)
	exp : exp . '<' exp  (51)
	exp : exp . '%' exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . LEQ exp  (55)
	exp : exp . GEQ exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . NEQ exp  (58)
	exp : exp . '[' exp ']'  (66)
	restoEscrita : exp . contescrita ';'  (80)
	contescrita : .  (82)

	EQ  shift 126
	LEQ  shift 127
	GEQ  shift 128
	NEQ  shift 129
	AND  shift 130
	OR  shift 131
	'>'  shift 132
	'<'  shift 133
	'+'  shift 134
	'-'  shift 135
	'*'  shift 136
	'/'  shift 137
	'%'  shift 138
	'['  shift 139
	','  shift 142
	';'  reduce 82

	contescrita  goto 143


state 110
	escrita : ESCREVA restoEscrita .  (79)

	.  reduce 79


state 111
	leia : LEIA ID . $$13 ';'  (84)
	$$13 : .  (83)

	.  reduce 83

	$$13  goto 144


state 112
	break : BREAK ';' .  (95)

	.  reduce 95


state 113
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '-' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '>' exp  (50)
	exp : exp . '<' exp  (51)
	exp : exp . '%' exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . LEQ exp  (55)
	exp : exp . GEQ exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . NEQ exp  (58)
	exp : exp . '[' exp ']'  (66)
	while : WHILE exp . $$15 ':' $$16 lcmdloop ENDWHILE  (91)
	$$15 : .  (89)

	EQ  shift 126
	LEQ  shift 127
	GEQ  shift 128
	NEQ  shift 129
	AND  shift 130
	OR  shift 131
	'>'  shift 132
	'<'  shift 133
	'+'  shift 134
	'-'  shift 135
	'*'  shift 136
	'/'  shift 137
	'%'  shift 138
	'['  shift 139
	':'  reduce 89

	$$15  goto 145


state 114
	for : FOR atrib . ';' exp $$17 ';' atrib ':' $$18 lcmdloop ENDFOR  (94)

	';'  shift 146
	.  error


state 115
	metconst : ID $$5 '(' lparam ')' ldecl '{' corpomet '}' .  (25)

	.  reduce 25


state 116
	lcmdloop : cmd lcmdloop .  (96)

	.  reduce 96


state 117
	cmd : atrib ';' .  (70)

	.  reduce 70


state 118
	lcmdloop : break lcmdloop .  (97)

	.  reduce 97


state 119
	metvoid : VOID ID $$8 '(' lparam ')' ldecl '{' corpomet . '}'  (30)

	'}'  shift 147
	.  error


state 120
	metnormal : tipo $$6 arrayMetodoOuNao ID $$7 '(' lparam ')' ldecl . '{' corpomet '}'  (28)

	'{'  shift 148
	.  error


state 121
	atrib : ID $$12 arrayOuNao . '=' exp  (78)

	'='  shift 149
	.  error


state 122
	chamaMetodo : ID '.' . ID $$19 '(' lparamchamada ')'  (100)

	ID  shift 150
	.  error


state 123
	chamaConstrutor : ID . $$20 '(' lparamchamada ')'  (102)
	$$20 : .  (101)

	.  reduce 101

	$$20  goto 151


state 124
	exp : NEW chamaConstrutor .  (68)

	.  reduce 68


state 125
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '-' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '>' exp  (50)
	exp : exp . '<' exp  (51)
	exp : exp . '%' exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . OR exp  (54)
	exp : exp . LEQ exp  (55)
	exp : exp . GEQ exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . NEQ exp  (58)
	exp : '(' exp . ')'  (64)
	exp : exp . '[' exp ']'  (66)

	EQ  shift 126
	LEQ  shift 127
	GEQ  shift 128
	NEQ  shift 129
	AND  shift 130
	OR  shift 131
	'>'  shift 132
	'<'  shift 133
	'+'  shift 134
	'-'  shift 135
	'*'  shift 136
	'/'  shift 137
	'%'  shift 138
	'['  shift 139
	')'  shift 152
	.  error


state 126
	exp : exp EQ . exp  (57)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 153
	chamaMetodo  goto 107


state 127
	exp : exp LEQ . exp  (55)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 154
	chamaMetodo  goto 107


state 128
	exp : exp GEQ . exp  (56)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 155
	chamaMetodo  goto 107


state 129
	exp : exp NEQ . exp  (58)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 156
	chamaMetodo  goto 107


state 130
	exp : exp AND . exp  (53)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 157
	chamaMetodo  goto 107


state 131
	exp : exp OR . exp  (54)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 158
	chamaMetodo  goto 107


state 132
	exp : exp '>' . exp  (50)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 159
	chamaMetodo  goto 107


state 133
	exp : exp '<' . exp  (51)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 160
	chamaMetodo  goto 107


state 134
	exp : exp '+' . exp  (46)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 161
	chamaMetodo  goto 107


state 135
	exp : exp '-' . exp  (48)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 162
	chamaMetodo  goto 107


state 136
	exp : exp '*' . exp  (47)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 163
	chamaMetodo  goto 107


state 137
	exp : exp '/' . exp  (49)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 164
	chamaMetodo  goto 107


state 138
	exp : exp '%' . exp  (52)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 165
	chamaMetodo  goto 107


state 139
	exp : exp '[' . exp ']'  (66)

	ID  shift 98
	NUM  shift 99
	LIT  shift 100
	TRUE  shift 101
	FALSE  shift 102
	NEW  shift 103
	NUMDOUBLE  shift 104
	'('  shift 105
	.  error

	exp  goto 166
	chamaMetodo  goto 107


state 140
	if : IF exp $$14 . ':' lcmdloop else  (86)

	':'  shift 167
	.  error


state 141
	return : RETURN exp $$11 . ';'  (45)

	';'  shift 168
	.  error

